<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="reservation_details" >Reservation Details</string>
    <string name="name" >Name</string>
    <string name="mobile_number" >Contact Number</string>
    <string name="group_size" >Group Size</string>
    <string name="date_and_time">Date And Time</string>
    <string name="table_selection">Table Selection</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-smoking</string>
    <string name="confirm_reservation">Confirm reservation</string>
</resources>